# gst-vosk

src/: gstvosk.c  gstvosk.h  meson.build
vosk/: meson.build
